--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries():\n",
+    "def capitalize_countries(\n",
     "    return travel_destinations.title()"
    ]
   },
