--- a/index.ipynb
+++ b/index.ipynb
@@ -221,8 +221,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries(\n",
-    "    return travel_destinations.title()"
+    "def capitalize_countries():\n",
+    "    for "
    ]
   },
   {
