--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for capital in travel_destination[:\n",
+    "    for capital in travel_destinations[0]:\n",
     "        "
    ]
   },
