--- a/index.ipynb
+++ b/index.ipynb
@@ -216,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for capital in travel_destinations[0]:\n",
-    "        travel_destinations.title"
+    "        travel_destinations.title()"
    ]
   },
   {
